--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,18 +1,18 @@
 /*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
+* This is a manifest file that'll be compiled into application.css, which will include all the files
+* listed below.
+*
+* Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
+* or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
+*
+* You're free to add application-wide styles to this file and they'll appear at the bottom of the
+* compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
+* files in this directory. Styles in this file should be added after the last require_* statement.
+* It is generally better to create a new file per style scope.
+*
+*= require_tree .
+*= require_self
+*/
 
 *, body{
   font-family: "open_sans",Arial,Helvetica,sans-serif !important;
@@ -39,11 +39,11 @@
 
 #homeButton{
   text-align: center;
-margin-bottom: 30px;
+  margin-bottom: 30px;
 }
 
 a.btn:visited {
-color:white !important;
+  color:white !important;
 }
 
 .candidates img{
@@ -67,7 +67,6 @@ color:white !important;
   text-align: center;
 }
 
-
 .candidates {
   padding : 20px;
 }
@@ -82,12 +81,11 @@ color:white !important;
 
 .media-left{
   float:left;
- padding: 20px;
+  padding: 20px;
 }
 .list-group{
-margin-left:0;
-margin-right:0;
-
+  margin-left:0;
+  margin-right:0;
 }
 
 .media-left img{
@@ -95,7 +93,7 @@ margin-right:0;
 }
 
 .media-body{
-padding-top: 20px !important;
+  padding-top: 20px !important;
 }
 
 #candidat img{
@@ -135,24 +133,28 @@ padding-top: 20px !important;
 
 }
 
+.item_long{
+width : 350px;
+float: left;
+padding: 8px;
+}
+
 .result{
-width:340px;
-margin: auto;
+  width:340px;
+  margin: auto;
 }
 
 .list-group-item {
-min-height: 50px;
+  min-height: 50px;
 }
 
-
-
 .item img{
-height:25px;
+  height:25px;
 }
 
 .grey{
-background-color: #f8f8f8 !important;
-height:50px;
+  background-color: #f8f8f8 !important;
+  height:50px;
 }
 
 .buttons{
@@ -168,11 +170,13 @@ height:50px;
 }
 
 h1{
-  text-align: center
+  text-align: center;
+  font-size: 25px !important;
+  margin-bottom: 40px !important;
 }
 
 .list-group{
   margin-top: 20px;
 }
 
- @import "bootstrap"
+@import "bootstrap"
