--- a/app/views/admin/tours/index.html.erb
+++ b/app/views/admin/tours/index.html.erb
@@ -1,55 +1,25 @@
 <h1> Tours </h1>
 <div class="center">
-<%= link_to 'Ajouter un Tour', new_admin_tour_path , :class => "btn btn-primary" %>
-<%= link_to 'Retour', admin_connexions_path , :class => "btn btn-primary" %>
+<% if @lastTour < 3 %>
+  <%= link_to 'Ajouter un Tour', new_admin_tour_path , :class => "btn btn-primary" %>
+<% end %>
+  <%= link_to 'Retour', admin_connexions_path , :class => "btn btn-primary" %>
 </div>
 <ul class="list-group">
   <li class="list-group-item grey">
-    <div class="item">Ouverture</div>
-    <div class="item">Cloture</div>
+    <div class="item_long">Ouverture</div>
+    <div class="item_long">Cloture</div>
     <div class="item">Validation</div>
   </li>
   <% @tours.each do |tour| %>
   <li class="list-group-item">
-    <div class="item"><%= tour.date_debut %></div>
-    <div class="item"><%= tour.date_fin %></div>
+    <div class="item_long"><%= tour.date_debut %></div>
+    <div class="item_long"><%= tour.date_fin %></div>
     <div class="item">validé ?</div>
     <div class="buttons">
-    <%= link_to 'Modifier', edit_admin_tour_path(tour), :class => "btn btn-primary" %>
-    <%= link_to 'Supprimer',admin_tour_path(tour), method: :delete, data: { confirm: 'Etes-vous sûr?' }, :class => "btn btn-primary" %>
+      <%= link_to 'Modifier', edit_admin_tour_path(tour), :class => "btn btn-primary" %>
+      <%= link_to 'Supprimer',admin_tour_path(tour), method: :delete, data: { confirm: 'Etes-vous sûr?' }, :class => "btn btn-primary" %>
     </div>
   </li>
   <% end %>
-
-<h1>Tours</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Date de début</th>
-      <th>Date de fin</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @tours.each do |tour| %>
-      <tr>
-        <td><%= tour.date_debut %></td>
-        <td><%= tour.date_fin %></td>
-        <td><%= link_to 'Voir les détails du tour', admin_tour_path(tour) %></td>
-        <td><%= link_to 'Modifier le tour', edit_admin_tour_path(tour) %></td>
-        <td><%= link_to 'Supprimer le tour', admin_tour_path(tour), method: :delete, data: { confirm: 'Etes-vous sur de vouloir supprimer le tour ? Cette opération est irréversible (et va vous coûter cher !)' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<!-- Seulement si il n'y a pas de tours / s'il n'y a qu'un tour !-->
-<% if @lastTour < 3 %>
-  <%= link_to 'Créer un nouveau tour', new_admin_tour_path %>
-<% end %>
-<%= link_to 'Retour', admin_connexions_path %>
 </ul>
